openshift/openshiftstack/application/knative/overlays/servicemesh/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cluster-local-gateway
  namespace: istio-system
  labels:
    networking.knative.dev/ingress-provider: istio
    serving.knative.dev/release: "v0.22.1"
spec:
  type: ClusterIP
  selector:
    istio: ingressgateway
  ports:
    - name: http2
      port: 80
      targetPort: 8080
